[package]
name = "ruspiro-boot"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.3.1" # remember to update html_root_url
description = """
Baremetal boot strapper code for the Raspberry Pi 3 to conviniently start a custom kernel within the Rust environment
without the need to deal with all the initial setup like stack pointers, getting MMU setup and get all cores kicked off 
for processing. Supports Aarch32 and Aarch64 builds.
"""
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-boot/tree/v0.3.1"
documentation = "https://docs.rs/ruspiro-boot/0.3.1"
readme = "README.md"
keywords = ["RusPiRo", "raspberrypi", "boot", "baremetal", "multicore"]
categories = ["no-std", "embedded"]
edition = "2018"
links = "ruspiro-boot"
build = "build.rs"

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-boot", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[build-dependencies]
cc = "1.0.38"

[dependencies]
ruspiro-register = "0.4"
ruspiro-mailbox = "0.3"
ruspiro-uart = "0.3"
ruspiro-timer = "0.4"
ruspiro-cache = "0.3"
ruspiro-interrupt = "0.3"
ruspiro-gpio = "0.4"
ruspiro-singleton = { path = "../singleton" }
log = "0.4.8"

[features]
default = ["ruspiro_pi3"]
ruspiro_pi3 = [
    "ruspiro-mailbox/ruspiro_pi3",
    "ruspiro-uart/ruspiro_pi3",
    "ruspiro-timer/ruspiro_pi3",
    "ruspiro-interrupt/ruspiro_pi3",
    "ruspiro-gpio/ruspiro_pi3"
]
singlecore = []
with_panic = []
